--- a/notebooks/Transfer_learning_detection_masques.ipynb
+++ b/notebooks/Transfer_learning_detection_masques.ipynb
@@ -301,7 +301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for layer in vgg16.layers:\n",
+    "for layer in base_model.layers[:-2]:\n",
     "    layer.trainable = False\n",
     "    #layer.trainable = True"
    ]
